--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,20 @@
 
 :root {
    --gradient_dark: linear-gradient(0deg, #1b1b1b, #222, #1b1b1b);
-   --body_dark: #222222;
+   --poppins: "Poppins", sans-serif;
+   --body_dark: #161616;
+   --header_bg: #434343;
    --light_dark: #444444;
    --gray: #d5d5d5;
    --white: #f5f5f5;
    --orange: #ffa500;
-   --poppins: "Poppins", sans-serif;
+   --glass_effect: rgba(255, 255, 255, 0.1);
+   --glass_shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+   --glass_border: 1px solid rgba(255, 255, 255, 0.5);
+   --glass_backdrop_filter: blur(5px);
+   --hide_bar: polygon(0 0, 100% 0, 100% 0, 0 0);
+   --open_bar: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+   --change: all 0.3s ease-in-out;
 }
 
 * {
@@ -15,4 +23,28 @@
    padding: 0;
    box-sizing: border-box;
    font-family: var(--poppins);
+   text-decoration: none;
+}
+body {
+   background: var(--body_dark);
+}
+
+html {
+   font-size: 62.5%;
+   scroll-behavior: smooth;
+}
+
+.btn {
+   padding: 1rem 2rem;
+   border: 0.1rem solid var(--gray);
+   color: var(--gray);
+   border-radius: 2rem;
+   background: var(--light_dark);
+   margin: 2rem 0.5rem 1rem 0.5rem;
+}
+
+.btn:hover {
+   background: var(--gray);
+   color: var(--body_dark);
+   transition: var(--change);
 }
