--- a/src/Pages/HomePage/Home/Home.css
+++ b/src/Pages/HomePage/Home/Home.css
@@ -2,12 +2,10 @@
    background: var(--glass_effect);
    background: var(--glass_green);
    margin-top: 5rem;
-   margin-bottom: 4rem;
    padding-bottom: 4rem;
    border-left: var(--glass_border);
-   border-bottom-left-radius: 3rem;
-   border-bottom-right-radius: 3rem;
    min-height: 55rem;
+   backdrop-filter: var(--glass_backdrop_filter);
 }
 @media (max-width: 1024px) {
    .homepage {
