--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
 
 :root {
    --gradient_bg: linear-gradient(
@@ -10,10 +10,10 @@
       #06b6d4
    );
    --poppins: "Poppins", sans-serif;
+   --nunito: "Nunito", sans-serif;
    --body_dark: #161616;
    --header_bg: #434343;
    --light_dark: #444444;
-   /* --green_dark: rgba(0, 127, 104, 0.9); */
    --light_green: rgba(5, 126, 55, 0.192);
    --green_dark: #022e35;
    --glass_green: #022e35;
@@ -22,7 +22,6 @@
    --gray: #d5d5d5;
    --white: #f5f5f5;
    --orange: #ffa500;
-   /* --glass_effect: rgba(255, 255, 255, 0.1); */
    --glass_effect: rgba(0, 0, 0, 0.4);
    --glass_shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
    --glass_border: 1px solid rgba(255, 255, 255, 0.5);
@@ -36,26 +35,26 @@
    margin: 0;
    padding: 0;
    box-sizing: border-box;
-   font-family: var(--poppins);
    text-decoration: none;
+   font-family: var(--nunito);
 }
 body {
-   /* background: var(--body_dark); */
    background: var(--gradient_bg);
-   /* background: #022e35; */
 }
 
 html {
+   font-family: var(--poppins);
    font-size: 62.5%;
    scroll-behavior: smooth;
 }
 .heading {
    color: white;
-   margin: 3rem 0 7rem 0;
+   margin: 3rem 0 4rem 0;
    text-align: center;
-   font-size: 2.5rem;
+   font-size: 2rem;
    color: var(--green);
    font-weight: normal;
+   font-family: var(--nunito);
 }
 
 .btn {
