--- a/src/Pages/ProjectPage/Projects/Projects.css
+++ b/src/Pages/ProjectPage/Projects/Projects.css
@@ -58,10 +58,10 @@
    font-size: 1rem;
    font-weight: bold;
 }
-.project_page .box button.more,
-.project_page .box button.site,
-.project_page .box button.client,
-.project_page .box button.server {
+.project_page .box a.more,
+.project_page .box a.site,
+.project_page .box a.client,
+.project_page .box a.server {
    position: absolute;
    bottom: 0.7rem;
    right: 1rem;
@@ -74,13 +74,13 @@
    border-radius: 50%;
    cursor: pointer;
 }
-.project_page .box button.site {
+.project_page .box a.site {
    right: 5rem;
 }
-.project_page .box button.client {
+.project_page .box a.client {
    right: 9.3rem;
 }
-.project_page .box button.server {
+.project_page .box a.server {
    right: 13.7rem;
 }
 @media (max-width: 1024px) {
