--- a/src/Pages/ProjectPage/Projects/Projects.css
+++ b/src/Pages/ProjectPage/Projects/Projects.css
@@ -6,6 +6,7 @@
    border-left: var(--glass_border);
    min-height: 55rem;
    backdrop-filter: var(--glass_backdrop_filter);
+   overflow-x: hidden;
 }
 
 .project_page .box {
@@ -91,5 +92,11 @@
 @media (max-width: 768px) {
    .project_page {
       margin-top: -1rem;
+      padding-left: 0rem;
+   }
+}
+@media (max-width: 450px) {
+   .project_page {
+      margin-top: -2rem;
    }
 }
