--- a/src/shared/CustomModal/CustomModal.css
+++ b/src/shared/CustomModal/CustomModal.css
@@ -1,7 +1,7 @@
 .modal {
    position: absolute;
-   top: 0rem;
-   left: 0rem;
+   top: 0%;
+   left: 0%;
    padding: 1.5rem 2rem;
    border-top: var(--top_border);
    z-index: 1001;
