--- a/src/Pages/HomePage/HomeProjects/HomeProjects.css
+++ b/src/Pages/HomePage/HomeProjects/HomeProjects.css
@@ -5,6 +5,7 @@
    transition: var(--change);
 }
 .card:hover {
+   transform: translateY(-10px);
    box-shadow: var(--glass_shadow);
 }
 .card img {
