--- a/src/Pages/ProjectPage/Projects/Projects.css
+++ b/src/Pages/ProjectPage/Projects/Projects.css
@@ -18,6 +18,11 @@
    min-height: 18rem;
    margin: 2rem 0.5rem;
 }
+.project_page .box:hover {
+   transform: translateY(-15px);
+   box-shadow: var(--glass_shadow);
+   transition: var(--change);
+}
 .project_page .box img {
    width: 100%;
    height: auto;
